tests/diagnostics/catalog/snapshots/ir/IR0061.snap
error[IR0061]: IR_E_UNKNOWN_MODULE
 --> tests/diagnostics/catalog/sources/ir/IR0061.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0061
  = help: keep IR validation diagnostics structured and catalog-backed
